fix(product): reset filter_si min-height on mobile to remove dead whitespace

--- a/src/css/pages/_product.scss
+++ b/src/css/pages/_product.scss
@@ -1063,6 +1063,8 @@ body {
     @media (max-width: 768px) {
         background: linear-gradient(to bottom, #41547A, #273D68);
         height: fit-content;
+        min-height: 0;
+        padding-bottom: 30px;
     }
 
     .si_wrap {
